--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "url": "https://github.com/abhinavtech/assignment/issues"
   },
   "homepage": "https://github.com/abhinavtech/assignment#readme",
-  "volta": {
-    "node": "14.15.1",
-    "npm": "6.14.9"
-  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
     "typescript": "^4.1.2"
   }
 }
