--- a/package.json
+++ b/package.json
@@ -4,10 +4,27 @@
   "description": "Pizza Assignment",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "npm build --watch --preserveWatchOutput",
+    "build": "ts-node build.ts && tsc --build tsconfig.prod.json",
+    "start": "node -r module-alias/register ./dist --env=production",
+    "start:dev": "nodemon",
     "lint": "eslint src --ext js,ts",
     "test": "jest"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts, html",
+    "ignore": [
+      "src/public"
+    ],
+    "exec": "ts-node -r tsconfig-paths/register ./src"
+  },
+  "_moduleAliases": {
+    "@daos": "dist/daos",
+    "@entities": "dist/entities",
+    "@shared": "dist/shared",
+    "@server": "dist/Server"
   },
   "repository": {
     "type": "git",
@@ -23,9 +40,39 @@
   },
   "homepage": "https://github.com/abhinavtech/assignment#readme",
   "devDependencies": {
+    "@types/command-line-args": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.9",
+    "@types/find": "^0.2.1",
+    "@types/fs-extra": "^9.0.4",
+    "@types/jest": "^26.0.15",
+    "@types/jsonfile": "^6.0.0",
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.9",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
+    "find": "^0.3.0",
+    "fs-extra": "^9.0.1",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "command-line-args": "^5.1.1",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^4.2.0",
+    "http-status-codes": "^2.1.4",
+    "jet-logger": "^1.0.4",
+    "jsonfile": "^6.1.0",
+    "module-alias": "^2.2.2",
+    "morgan": "^1.10.0"
   }
 }
